# NeuroExcess

./: .gitignore  README.md  neuro access.pptx
backend/: .env.sample  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/routes/: auth_route.py  contact_route.py  image_route.py  ocr_route.py
backend/src/core/: config.py  database.py
backend/src/models/: contact.py  user.py
backend/src/schemas/: auth_schema.py  contact_schema.py  image_schema.py
backend/src/services/ai/: client.py  exceptions.py  image_caption_service.py
backend/src/services/auth/: auth_service.py
backend/src/services/ocr/: ocr_service.py
backend/src/utils/: security.py  validators.py
extension/: background.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
extension/components/popup/: PopupApp.tsx
extension/contents/: neuroaccess.tsx
extension/features/calm-theme/: declutter.ts  desaturate.ts  index.ts  motionReduction.ts
extension/features/contrast-fixer/: colorBlindFilters.ts  contrastEngine.ts  index.ts
extension/features/global-mode/: AltTextReviewOverlay.tsx  aiImageScanner.ts  autoFix.ts
extension/features/image-ai/: ImageAiTooltipOverlay.tsx
extension/features/reading-ruler/: RulerOverlay.tsx
extension/hooks/: useActiveTabHostname.ts  useAuditSummary.ts  useEffectiveSettings.ts
extension/lib/ai/: backendClient.ts
extension/tabs/: describe.tsx
website/: package-lock.json  package.json
website/backend/: .env.sample  package-lock.json  package.json  server.js
website/src/: App.jsx  main.jsx
(+23 files in other folders)
