[project]
name = "backend"
version = "0.1.0"
description = "NeuroExcess backend"
readme = "README.md"
authors = [
    { name = "Pratham Jain", email = "2muchappy420@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pillow>=10.0.0",
    "easyocr>=1.7.2",
    "aiofiles>=23.0.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
